more uniform probability

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1,7 +1,7 @@
 % arara: xelatex: {shell: yes}
-% arara: biber
-% arara: xelatex: {shell: yes}
-% arara: xelatex: {shell: yes}
+%% arara: biber
+%% arara: xelatex: {shell: yes}
+%% arara: xelatex: {shell: yes}
 
 %!TeX cleanPatterns = $OUTDIR/$JOB!($OUTEXT|.synctex.gz|.tex|.pdf), /$OUTDIR/_minted-$JOB/
 \documentclass[12pt, a4paper]{article}
@@ -143,7 +143,7 @@
 \renewcommand{\cftsecdotsep}{\cftdotsep} % добавляем точечки
 
 \AddEnumerateCounter{\asbuk}{\russian@alph}{щ} % для списков с русскими буквами
-\setlist[enumerate, 2]{label=\asbuk*),ref=\asbuk*}
+\setlist[enumerate, 1]{label=\asbuk*),ref=\asbuk*} % цифра рядом с enumerate = уровень нумерации
 
 
 
@@ -414,7 +414,7 @@ $\P(X=x)$ & $2/8$ & $3/8$ & $3/8$ \\
 РОО, то выигрывает Саша, если ОOР, то — Маша. Случайная величина $X$ — общее количество подбрасываний, $Y$ — количество выпавших решек.
 \begin{enumerate}
 \item У кого какие шансы выиграть?
-\item $\P(X=4)$, $\P(Y=1)$, $\E(X)$, $\E(Y)$
+\item Найдите $\P(X=4)$, $\P(Y=1)$, $\E(X)$, $\E(Y)$.
 \item Решите аналогичную задачу для ОРО и ООР.
 \end{enumerate}
 
@@ -513,18 +513,18 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Вася нажимает на пульте телевизора кнопку «On-Off» 100 раз
 подряд. Пульт старый, поэтому в первый раз кнопка срабатывает с
 вероятностью $\frac{1}{2}$, затем вероятность срабатывания падает.
 Какова вероятность того, что после всех нажатий телевизор будет
 включен, если сейчас он выключен?
-
-
 \begin{sol}
   1/2
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Suppose the probability to get a head when throwing an unfair coin is $p$,
  what's the expected number of throwings in order to get two consecutive heads?
@@ -554,7 +554,7 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \end{problem}
 
 \begin{problem}
- Есть три комнаты. В первой из них лежит сыр. Если мышка
+Есть три комнаты. В первой из них лежит сыр. Если мышка
 попадает в первую комнату, то она находит сыр через одну минуту.
 Если мышка попадает во вторую комнату, то она ищет сыр две минуты
 и покидает комнату. Если мышка попадает в третью комнату, то она
@@ -597,7 +597,10 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 
 
 \begin{problem}
- Треугольник с вершинами $(0;0)$, $(2;0)$ и $(1;1)$. Внутри него случайным образом выбирается точка, $X$ -- абсцисса точки. Найдите $\P(X>1)$, $\P(X\in [0.5;1])$, $\E(X)$
+ Треугольник с вершинами $(0;0)$, $(2;0)$ и $(1;1)$. 
+ Внутри него случайным образом выбирается точка, $X$ — абсцисса точки. 
+ 
+ Найдите $\P(X>1)$, $\P(X\in [0.5;1])$, $\E(X)$
 
 \begin{sol}
 \end{sol}
@@ -605,10 +608,17 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 
 
 \begin{problem}
- Треугольник с вершинами $(0;0)$, $(2;0)$ и $(2;1)$. Внутри него случайным образом выбирается точка, $X$ -- абсцисса точки. Найдите $\P(X>1)$, $\P(X\in [0.5;1])$. Что больше, $\E(X)$ или 1?
-
+ Треугольник с вершинами $(0;0)$, $(2;0)$ и $(2;1)$. 
+ Внутри него случайным образом выбирается точка, $X$ — абсцисса точки. 
+ 
+ Найдите $\P(X>1)$, $\P(X\in [0.5;1])$. Что больше, $\E(X)$ или 1?
+ Найдите $\E(X)$ из геометрических соображений.
 
 \begin{sol}
+  Вертикальная прямая $x = \E(X)$ должна уравновешивать металлическую треугольную пластинку. 
+  Для этого она должна проходить через точку пересечения медиан, а медианы этой точкой делятся в пропорции 2:1 от вершины.
+
+  Отсюда $\E(X) = 4/3$.
 \end{sol}
 \end{problem}
 
@@ -707,6 +717,51 @@ $21^{10}/30^{10}$
 \end{sol}
 \end{problem}
   
+
+
+\begin{problem}
+Аня хватается за верёвку в форме окружности в произвольной точке.
+Боря берёт мачете и с завязанными глазами разрубает верёвку в двух случайных независимых местах. 
+Аня забирает себе тот кусок, за который держится. Боря забирает оставшийся кусок. 
+Вся верёвка имеет единичную длину.
+  \begin{enumerate}
+  \item Чему равна ожидаемая длина куска верёвки, доставшегося Ане?
+  \item Найдите вероятность того, что у Ани верёвка длиннее.
+\end{enumerate}
+\begin{sol}
+  \begin{enumerate}
+  \item Мысленно отметим на окружности три точки: места ударов Бориса и точку,
+  где схватилась Анна. Можно считать, что эти три точки равномерно
+  и независимо распределены по окружности.
+  Следовательно, среднее расстояние между соседними точками равно $1/3$.
+  Аня берёт два кусочка, слева и справа от своей точки.
+  Значит ей в среднем достаётся $2/3$ окружности.
+  \item  Объявим точку, где схватилась Аня нулём.
+  Координаты двух ударов изобразим на плоскости. Закрашиваем подходящий участок.
+  Аня выигрывает на полосе вдоль биссектрисы за исключением двух треугольников.
+  Вероятность того, что Анин кусок длиннее равна $3/4$.
+  \end{enumerate}
+\end{sol}
+\end{problem}
+    
+\begin{problem}
+Города Левск и Правск соединены железной дорогой. 
+Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час. 
+Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени, 
+дождаться первого проходящего мимо поезда и записать его направление. 
+Поезда обоих направлений в его записях встречаются одинаково часто. 
+
+\begin{enumerate}
+    \item В скольки минут пути на поезде от ближайшего города он живёт?
+    \item Сколько в среднем он ждёт поезда?
+\end{enumerate}
+\begin{sol}
+Рисуем картинку, по горизонтальной оси откладываем время, по вертикальной координаты поездов. 
+Получаем, что он живёт в 15 минутах от ближайшего города и ждать поезда в среднем тоже 15 минут.
+
+Задача от Виктора Прасолова. 
+\end{sol}
+\end{problem}
 
 
 
@@ -1214,6 +1269,82 @@ X, \text{ если } X\geq a.\\
     \item 
   \end{enumerate}
 \end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+  Величины $X_1$, $X_2$, \ldots{ } независимы и имеют нарисованную функцию распределения:
+
+  \begin{tikzpicture}
+    % \draw[line width=0.1mm, color=black] (-0,-0) grid (4,2);
+    
+    \draw[->] (-0.5, 0) -- (4.2, 0) node[right] {$x$};
+    \draw[->] (0, -0.2) -- (0, 2.2) node[above] {$F(x)$};
+    \draw[dotted] (0, 2) -- (3, 2);
+    
+    \draw[line width=0.5mm, color=black] (-0.5, 0) -- (0, 0);
+    \draw[line width=0.5mm, color=black] (0, 0) -- (3, 2);
+    \draw[line width=0.5mm, color=black] (3, 2) -- (4.2, 2);
+    
+    \draw (0, 2) node[left] {$1$};
+    
+    \end{tikzpicture}
+  \begin{enumerate}
+    \item Нарисуйте на картинке функции распределения величин $L_2 = \min\{X_1, X_2\}$ и $R_2 = \max\{X_1, X_2\}$.
+    \item Как при большом $n$ выглядят функции распределения $L_n = \min\{X_1, X_2, \ldots, X_n\}$ и $R_n = \max\{X_1, X_2, \ldots, X_n\}$?
+  \end{enumerate}
+  
+\end{problem}
+
+
+
+\begin{problem}
+  На картинках нарисованы функции плотности случайных величин.
+  В каждом случае найдите константу $a$ и математическое ожидание случайной величины. 
+
+  \begin{enumerate}
+    \item  \begin{tikzpicture}
+      % \draw[line width=0.1mm, color=black] (-0,-0) grid (4,2);
+      
+      \draw[->] (-4.2, 0) -- (4.2, 0) node[right] {$x$};
+      \draw[->] (0, -0.2) -- (0, 2.9) node[above] {$f(x)$};
+      % \draw[dotted] (0,2) -- (3,2);
+      
+      \draw[line width=0.5mm, color=black, ->] (-4.2, 0) -- (-2, 0);
+      \draw[line width=0.5mm, color=black] (-2, 1) -- (0, 2);
+      \draw[line width=0.5mm, color=black] (0, 2) -- (2, 1);
+      \draw[line width=0.5mm, color=black, <-] (2, 0) -- (4.2, 0);
+      
+      \draw (0,2) node[above left] {$2$};
+      \draw (2,0) node[below] {$a$};
+      \draw (-2,0) node[below] {$-a$};
+
+      \fill (-2,1) circle (2pt);
+      \fill (2,1) circle (2pt);
+
+      
+      \end{tikzpicture}
+  
+    \item \begin{tikzpicture}
+      % \draw[line width=0.1mm, color=black] (-0,-0) grid (4,2);
+      
+      \draw[->] (-3.2, 0) -- (5.2, 0) node[right] {$x$};
+      \draw[->] (0, -0.2) -- (0, 2.2) node[above] {$f(x)$};
+      % \draw[dotted] (0,2) -- (3,2);
+      
+      \draw[line width=0.5mm, color=black] (-3.2, 0) -- (-2, 0);
+      \draw[line width=0.5mm, color=black] (-2, 0) -- (0, 1);
+      \draw[line width=0.5mm, color=black] (0, 1) -- (4, 0);
+      \draw[line width=0.5mm, color=black] (4, 0) -- (5.2, 0);
+      
+      \draw (0, 1) node[above left] {$a$};
+      \draw (-2, 0) node[below] {$-2$};
+      \draw (4, 0) node[below] {$3$};
+      
+      \end{tikzpicture}
+  \end{enumerate}
+  
 \end{problem}
 
 
